--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.2",
+		"@imbios/next-pwa": "^1.1.1",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-aspect-ratio": "^1.0.3",
